--- a/frontend/src/CSS/MainPage.css
+++ b/frontend/src/CSS/MainPage.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-flow: column wrap;
     justify-content: space-between;
+    padding-bottom: 160px;
 }
 
 .Card {
@@ -55,12 +56,8 @@
     justify-content: space-between;
 }
 
-/* #link {
-    position: relative;
-    top: 1rem;
-    left: 4rem;
-} */
 
 #hhead {
     margin-left: 2rem;
+    font-size: 1.6rem;
 }
